--- a/public/new.html
+++ b/public/new.html
@@ -10,18 +10,25 @@
   <body
     class="bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-blue-700 via-cyan-700 to-blue-500"
   >
-    <div class="grid grid-cols-2 gap-x-6 w-[90vw] h-[90vh] mx-12">
+    <div
+      class="grid grid-cols-2 gap-x-6 w-[90vw] h-[90vh] mx-12 md:max-md:grid-rows-2 md:max-xl:grid-cols-2"
+    >
       <section
-        class="flex bg-blue-300 mt-8 rounded-2xl shadow-md shadow-blue-400"
+        class="flex bg-blue-300 mt-8 rounded-2xl shadow-md shadow-blue-400 h-full md:max-sm:h-[200px]"
       >
-        <div class="grid grid-cols-2 gap-x-2 w-full">
+        <div
+          class="grid grid-cols-2 gap-x-2 w-full h-full md:max-md:grid-rows-2"
+        >
           <div
             class="grid grid-rows-5 gap-y-4 bg-blue-400 mx-6 my-4 rounded-2xl"
           >
             <section
               class="bg-blue-200 rounded-2xl row-span-1 shadow-md shadow-blue-300"
             >
-              <p class="text-2xl font-extrabold text-blue-600 p-4">
+              <p
+                id="name"
+                class="text-2xl font-extrabold text-blue-600 p-4 md:max-lg:text-lg md:max-md:text-lg"
+              >
                 Name Surname
               </p>
             </section>
@@ -72,7 +79,7 @@
         </div>
       </section>
       <section
-        class="flex bg-blue-300 mt-8 rounded-2xl shadow-md shadow-blue-400"
+        class="flex bg-blue-300 mt-8 rounded-2xl shadow-md shadow-blue-400 h-full md:max-sm:h-[200px]"
       >
         <div class="grid grid-rows-2 gap-y-1 w-[90vw]">
           <section
