--- a/public/welcome.html
+++ b/public/welcome.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="main.css" />
     <title>Welcome page</title>
   </head>
@@ -12,15 +18,15 @@
   >
     <section class="flex items-center justify-center h-screen">
       <div
-        class="w-[30rem] h-[30rem] bg-blue-400 shadow-md shadow-blue-800 bg-opacity-80"
+        class="max-[650px]:w-[25rem] max-[650px]:h-[25rem] w-[30rem] h-[30rem] bg-blue-400 shadow-md shadow-blue-800 bg-opacity-80"
       >
         <p
-          class="underline decoration-white-100 decoration-double decoration-1 text-center mt-8 mx-2 text-neutral-50 text-2xl font-josefin font-medium"
+          class="max-[650px]:text-xl underline decoration-white-100 decoration-double decoration-1 text-center mt-8 mx-2 text-neutral-50 text-3xl font-josefin font-bold"
         >
           Easy CV
         </p>
         <p
-          class="text-center mt-6 mx-8 text-neutral-100 text-base font-josefin"
+          class="max-[650px]:text-base text-center mt-6 mx-8 text-neutral-100 text-lg font-josefin font-semibold"
         >
           This tool was designed in mind to provide the simpliest and the most
           basic CV template. Using Easy CV you can fast and effecient write up a
@@ -29,19 +35,10 @@
           have a closer view on my example. When finishing with your CV, you'll
           have a option to save it for later print or sending.
         </p>
-        <div class="grid grid-cols-2 gap-x-14 mt-16 mx-20">
-          <button
-            id="go"
-            class="bg-blue-800 bg-opacity-60 text-neutral-100 text-base rounded-sm hover:shadow-sm hover:shadow-blue-300"
-          >
-            Go!
-          </button>
-          <button
-            id="peek"
-            class="bg-blue-800 bg-opacity-60 text-neutral-100 text-base rounded-sm hover:shadow-sm hover:shadow-blue-300"
-          >
-            Peek
-          </button>
+        <div class="max-[650px]:mt-6 grid grid-cols-2 gap-x-14 mt-12 mx-20">
+          <a href="new.html"> <button class="href-button">Go!</button></a>
+
+          <a href="example.html"> <button class="href-button">Peek</button></a>
         </div>
       </div>
     </section>
