--- a/public/new.html
+++ b/public/new.html
@@ -11,10 +11,10 @@
     class="bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-blue-700 via-cyan-700 to-blue-500"
   >
     <div
-      class="grid grid-cols-2 gap-x-6 w-[90vw] h-[90vh] mx-12 md:max-md:grid-rows-2 md:max-xl:grid-cols-2"
+      class="grid grid-rows-2 lg:gap-x-6 gap-y-8 mx-6 my-4 w-auto h-full lg:grid-cols-2 lg:grid-rows-none lg:mx-12"
     >
       <section
-        class="flex bg-blue-300 mt-8 rounded-2xl shadow-md shadow-blue-400 h-full md:max-sm:h-[200px]"
+        class="flex bg-blue-300 rounded-2xl shadow-md shadow-blue-400 h-full lg:h-screen"
       >
         <div
           class="grid grid-cols-2 gap-x-2 w-full h-full md:max-md:grid-rows-2"
@@ -79,7 +79,7 @@
         </div>
       </section>
       <section
-        class="flex bg-blue-300 mt-8 rounded-2xl shadow-md shadow-blue-400 h-full md:max-sm:h-[200px]"
+        class="flex bg-blue-300 rounded-2xl shadow-md shadow-blue-400 h-full lg:h-screen"
       >
         <div class="grid grid-rows-2 gap-y-1 w-[90vw]">
           <section
@@ -111,5 +111,22 @@
         </div>
       </section>
     </div>
+    <div
+      id="modal"
+      class="w-screen h-screen top-0 left-0 z-10 bg-black bg-opacity-30 fixed"
+    >
+      <div>
+        <div
+          class="bottom-0 w-screen h-[200px] fixed bg-blue-300 flex flex-col items-center justify-center"
+        >
+          <p class="mt-4 text-center">
+            Please enter your name and surname to start
+          </p>
+          <input class="mt-4 place-self-center" type="text" value="" />
+        </div>
+        <button id="close" class="w-2 h-2 relative bg-white"></button>
+      </div>
+    </div>
+    <script type="text/javascript" src="../src/scripts.js"></script>
   </body>
 </html>
