--- a/public/welcome.html
+++ b/public/welcome.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main.css" />
+    <link rel="icon" type="image/x-icon" href="../src/favicon.png" />
     <title>Welcome page</title>
   </head>
   <body
