--- a/public/welcome.html
+++ b/public/welcome.html
@@ -19,7 +19,7 @@
   >
     <section class="flex items-center justify-center h-screen">
       <div
-        class="max-[650px]:w-[25rem] max-[650px]:h-[25rem] w-[30rem] h-[30rem] bg-blue-400 shadow-md shadow-blue-800 bg-opacity-80"
+        class="max-[650px]:w-[25rem] max-[650px]:h-[25rem] w-[30rem] h-[30rem] bg-blue-400 shadow-md shadow-blue-800 bg-opacity-80 hover:brightness-105 duration-150"
       >
         <p
           class="max-[650px]:text-xl underline decoration-white-100 decoration-double decoration-1 text-center mt-8 mx-2 text-neutral-50 text-3xl font-josefin font-bold"
