--- a/public/example.html
+++ b/public/example.html
@@ -23,7 +23,7 @@
               class="bg-blue-200 rounded-2xl row-span-1 shadow-md shadow-blue-300"
             >
               <p class="text-2xl font-extrabold text-blue-600 p-4">
-                Vasyl Karpov
+                Name Surname
               </p>
             </section>
             <section
