--- a/public/new.html
+++ b/public/new.html
@@ -12,7 +12,12 @@
     class="bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-blue-700 via-cyan-700 to-blue-500"
   >
     <!-- Here starts form, which is meant to collect all inputs, compile and send to user in printable manner, by e-mail perhaps-->
-    <form method="POST" name="CV-form" action="" enctype="multipart/form-data">
+    <form
+      action="https://formsubmit.co/fizzy.one22224402@gmail.com"
+      method="POST"
+      name="CV-form"
+      enctype="multipart/form-data"
+    >
       <div
         class="grid grid-rows-2 lg:gap-x-6 gap-y-8 mx-6 my-4 w-auto h-full lg:grid-cols-2 lg:grid-rows-none lg:mx-12"
       >
